Fix inconsistent gap in back buttons

--- a/TangerineUI.css
+++ b/TangerineUI.css
@@ -3769,9 +3769,6 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
         display: none;
     }
 }
-.app-body :is(.column-header__back-button, .column-back-button) {
-    gap: 5px;
-}
 .app-body .column-back-button__icon {
     margin-inline-end: 0;
 }
@@ -3882,6 +3879,9 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
 }
 .app-body .column-header > button:nth-child(2) {
     padding-left: 0;
+}
+.app-body .column-header :is(.column-header__back-button, .column-back-button) {
+    gap: 5px;
 }
 .app-body .column-header .column-header__back-button {
     padding-right: 15px;
